--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <label for="name">
             <input type="text" id="name">
         </label>
-        <button type="submit">Submit</button>
+        <button type="submit">Submitt</button>
     </form>
 </body>
 
